# Aprendo

./: Cargo.toml  README.md  dictionary-save
src/: dictionary.rs  environment.rs  helper.rs  main.rs  phrase.rs  translation.rs
