[package]
name = "aprendo"
version = "0.1.0"
authors = ["Malique_Auguste <maliqueauguste@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"